--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   ],
   "dependencies": {
     "extend": "^1.0.0",
-    "handlebars": "^4.0.5",
     "sassdoc-extras": "^2.0.0",
     "swig": "1.4.0",
     "swig-extras": "0.*",
@@ -17,9 +16,12 @@
     "node": ">=0.10.0"
   },
   "devDependencies": {
+    "chroma-js": "^0.6.3",
     "autoprefixer-core": "^6.0.1",
     "bluebird": "^3.4.0",
     "browser-sync": "^2.13.0",
+    "es6-denodeify": "^0.1.0",
+    "es6-promise": "^2.0.1",
     "fs-extra": "^0.30.0",
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.0",
