--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "sassdoc-theme-default",
-  "description": "SassDoc's default theme",
-  "title": "SassDoc Default Theme",
-  "author": "SassDoc team",
-  "version": "2.4.3",
+  "name": "sassdoc-theme-mx",
+  "description": "Fancypants sassdoc theme by Mobelux",
+  "title": "SassDoc Mobelux Theme",
+  "author": "Mobelux",
+  "version": "0.1.0",
   "keywords": [
-    "sassdoc-theme"
+    "sassdoc-theme",
+    "mobelux",
+    "mx",
+    "sassdoc-theme-mx"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/SassDoc/sassdoc-theme-default.git"
+    "url": "https://github.com/mobelux/sassdoc-theme-mx.git"
   },
   "files": [
     "assets",
